postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-llamastack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-llamastack
  template:
    metadata:
      labels:
        app: postgres-llamastack
    spec:
      containers:
        - name: postgres
          image: registry.redhat.io/rhel9/postgresql-16:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-llamastack-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-llamastack
spec:
  selector:
    app: postgres-llamastack
  ports:
    - port: 5432
      targetPort: 5432
